--- a/02_dom/03-addEventListener.html
+++ b/02_dom/03-addEventListener.html
@@ -35,7 +35,7 @@
         }
 
         // 
-        //bouton.onclick = deplacement; // on écrit la fonction sans sa paire de () sinon elle appelée et exécutée immédiatement sans l'ordre du click dont elle dépend
+        //bouton.onclick = deplacement; // on écrit la fonction sans sa paire de () sinon elle est appelée et exécutée immédiatement sans l'ordre du click dont elle dépend
         //bouton.onclick = couleur;  // on constate que le carré devient jaune mais ne se déplace plus , car c'est le denier évenement qui prévaut avec cette syntaxe onclick.
 
         // pour s'en sortir en utilise  addEventListener :
