--- a/02_dom/01-secteur.html
+++ b/02_dom/01-secteur.html
@@ -142,11 +142,38 @@
                 }
         //------------------------------------------------------------------------------
 
+                   placard = {
+    cereales: {
+        corn_flakes: 1,
+        frosties: 2
+    },
+    barres: {
+        snickers: 5,
+        mars: 6
+    },
+    pates: {
+        tagliatelle: 2,
+        spaghetti: 5
+    }
+};
 
+if (placard.cereales.rice_krispies) {
+    console.log("A");
+} else if (placard.cereales.corn_flakes > placard.cereales.frosties) {
+    console.log("B");
+} else {
+    if (placard.cereales.corn_flakes && (placard.barres.snickers || placard.barres.mars)) {
+        console.log("C");
+    } else {
+        console.log("D");
+    }
+}
 
-
-
-
+if (!(placard.barres.snickers <= placard.pates.spaghetti)) {
+    console.log("E");
+} else if (placard.barres.snickers === placard.pates.spaghetti) {
+    console.log("F");
+}
         //------------------------------------
         // 
 
