--- a/04-jQuery/01-instalation/instalation.html
+++ b/04-jQuery/01-instalation/instalation.html
@@ -14,7 +14,7 @@
 
 
     <!-- Deux façons d'implémenter jQuery :  -->
-    <!-- 1° En faphe de dévelopement , vous pouvez télécharger la bibliothèque sur jQuery.com, la mettre dans un dossier de votre site, rt faire le lien suivant dans une balise <script> :-->
+    <!-- 1° En faphe de dévelopement , vous pouvez télécharger la bibliothèque sur jQuery.com, la mettre dans un dossier de votre site, et faire le lien suivant dans une balise <script> :-->
         
         <!-- <script src="jQuery.js"></script> -->
 
